Spritetool configuration coding
More coding for the spritetool manager, which is currently not complete.

--- a/source/Podoboo/App.config
+++ b/source/Podoboo/App.config
@@ -49,6 +49,24 @@
             <setting name="newItemString" serializeAs="String">
                 <value />
             </setting>
+            <setting name="usedSprites" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="spritetoolOption" serializeAs="String">
+                <value>romi</value>
+            </setting>
+            <setting name="insertedSprites_romi" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="insertedSprites_cluster" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="insertedSprites_ow" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="insertedSprites_pixi" serializeAs="String">
+                <value />
+            </setting>
         </Podoboo.Properties.Settings>
     </userSettings>
 </configuration>
