--- a/source/Podoboo/Properties/Settings.settings
+++ b/source/Podoboo/Properties/Settings.settings
@@ -59,5 +59,8 @@
     <Setting Name="insertedSprites_pixi" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="spriteDatabase" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
