Clean up unused files + update Form1.cs + update ImportSprites.cs + add SpriteDatabase.cs
+kas and Asar+ have been deleted, as they're pointless. Form1 has been
modified to reflect that. Importing (not finished) and sprite list
functions have been added to ImportSprites.cs. SpriteDatabase.cs is the
sprite list function, which simply lists all of the sprites located in
Podoboo's resources. It is not nearly as advanced as the rest of Podoboo
and is not completely finished.

--- a/source/Podoboo/Podoboo.csproj
+++ b/source/Podoboo/Podoboo.csproj
@@ -11,6 +11,21 @@
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>0.2.1.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -31,6 +46,13 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>Podoboo.Program</StartupObject>
+  </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Configuration.Install" />
@@ -47,18 +69,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="+kas.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="+kas.Designer.cs">
-      <DependentUpon>+kas.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Asar+.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Asar+.Designer.cs">
-      <DependentUpon>Asar+.cs</DependentUpon>
-    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,12 +86,6 @@
     </Compile>
     <Compile Include="ImportSprites.Designer.cs">
       <DependentUpon>ImportSprites.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Installer1.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Installer1.Designer.cs">
-      <DependentUpon>Installer1.cs</DependentUpon>
     </Compile>
     <Compile Include="Options.cs">
       <SubType>Form</SubType>
@@ -104,12 +108,6 @@
     <Compile Include="Sprites.Designer.cs">
       <DependentUpon>Sprites.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="+kas.resx">
-      <DependentUpon>+kas.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Asar+.resx">
-      <DependentUpon>Asar+.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -119,9 +117,6 @@
     <EmbeddedResource Include="frmAppearanceEditor.resx" />
     <EmbeddedResource Include="ImportSprites.resx">
       <DependentUpon>ImportSprites.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Installer1.resx">
-      <DependentUpon>Installer1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Options.resx">
       <DependentUpon>Options.cs</DependentUpon>
@@ -153,6 +148,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.5.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
