Update ImportSprites.cs + Update Form1.cs
Preparing for the backup operations to be ready in Form1, and working on
bugs in ImportSprites.

--- a/source/Podoboo/App.config
+++ b/source/Podoboo/App.config
@@ -67,6 +67,9 @@
             <setting name="insertedSprites_pixi" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Setting" serializeAs="String">
+                <value />
+            </setting>
         </Podoboo.Properties.Settings>
     </userSettings>
 </configuration>
