--- a/source/Podoboo/Properties/Settings.settings
+++ b/source/Podoboo/Properties/Settings.settings
@@ -62,7 +62,7 @@
     <Setting Name="spriteDatabase" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="Setting" Type="System.String" Scope="User">
+    <Setting Name="errorLog" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
