--- a/source/Podoboo/App.config
+++ b/source/Podoboo/App.config
@@ -67,7 +67,7 @@
             <setting name="insertedSprites_pixi" serializeAs="String">
                 <value />
             </setting>
-            <setting name="Setting" serializeAs="String">
+            <setting name="errorLog" serializeAs="String">
                 <value />
             </setting>
         </Podoboo.Properties.Settings>
